<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="100">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:layout_weight="45">

        <ImageView
            android:id="@+id/messages_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/messages_icon_desc" />

        <ImageView
            android:id="@+id/group_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_icon_new"
            app:layout_constraintStart_toEndOf="@+id/messages_icon"
            app:layout_constraintEnd_toStartOf="@+id/shelf_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/group_icon_desc" />

        <ImageView
            android:id="@+id/shelf_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationY="2"
            android:src="@drawable/outline_table_rows_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/shelf_icon_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:orientation="vertical"
        android:weightSum="2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="5dp"
            android:id="@+id/container1_gridview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/top_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gridview_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/legolas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/gridview_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/gridview_image_desc" />

            <TextView
                android:id="@+id/gridview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/baseline_mic_off_24"
                tools:text="TextView"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container1_gridview2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/bottom_background">

            <ImageView
                android:id="@+id/gridview_image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/gridview_text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/gridview_image_desc"/>

            <TextView
                android:id="@+id/gridview_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/baseline_mic_off_24"
                tools:text="TextView"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="40"
        android:padding="24dp">

        <ImageView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/camera_off"
            android:background="@color/black"
            android:contentDescription="@string/video_imageview_desc"
            app:layout_constraintStart_toStartOf="@+id/bottom_layout"
            app:layout_constraintEnd_toStartOf="@+id/mic"
            app:layout_constraintBottom_toBottomOf="parent" />


        <ImageView
            android:id="@+id/mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mic_off"
            android:background="@color/black"
            android:contentDescription="@string/mic_imageview_desc"
            app:layout_constraintStart_toEndOf="@+id/video"
            app:layout_constraintEnd_toStartOf="@+id/alert"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/waving_hand"
            android:background="@color/black"
            android:contentDescription="@string/alert_imageview_desc"
            app:layout_constraintStart_toEndOf="@+id/mic"
            app:layout_constraintEnd_toStartOf="@+id/exit"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/end_call"
            android:background="@color/red"
            android:backgroundTint="#000000"
            android:contentDescription="@string/exit_imageview_desc"
            app:layout_constraintStart_toEndOf="@+id/alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>